# bees-knees

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
prophet/: app.py  config.py  data.py  llm.py  view.py
prophet/domain/: improvement.py  improvement_repo.py  llm.py  original.py
prophet/infra/: improvement_pickle_repo.py  improvement_supa_repo.py  llm_groq.py
static/: style.css
templates/: floating_button.html  index.html  list_improvements.html  list_originals.html
test/resources/: feed.atom  feed_short.atom
