[project]
name = "pollen-prophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "feedparser>=6.0.11",
    "groq>=0.26.0",
]

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.12"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prophet"]


[project.scripts]
prophet = "prophet.app:start"
