[project]
name = "bees-knees"
version = "0.1.0"
description = "Where fact checking is optional, but irony is not."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils[all]>=0.8.0",
    "fastapi[standard]>=0.115.12",
    "feedparser>=6.0.11",
    "groq>=0.26.0",
    "supabase>=2.15.2",
]

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.12"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prophet"]


[project.scripts]
prophet = "prophet.app:start"
